# jwt-in-c-example

./: .gitmodules  CMakeLists.txt  README.md
src/: IT.declare.h  IT.define.h  IT.extern.h  IT_srvd.c  config.h  l8w8.c  libIT.h  msgid_cmdd.h  msgid_s2o.h  msgid_schd.h  srvd_newfunc.hpp
src/lib/: 1  DES_func.c  KISA_SHA256.c  KISA_SHA256.h  Makefile  afiedt.buf  agentver.c  authchk.c.notused  c  change_orac_auth.c  change_orac_auth.c.20230607  change_orac_auth.c.20240322  changedate.c  changedate.c.20200414  changetab.c  check_lic.c  chkip.c  configNetwork.c  configPcuSet.c  configSyslogSet.c  config_daemon_sighup.c  confirm_mounted.c  daemonize.c  daemonize.c.20230607  daemonized.c  date1.c  dump_ps.c  dump_tempfile.c  error_log.c  etc_decrypt.c  etc_encrypt.c  expand_env.c  fcopy.c  file_compare.c  file_read.c  file_write.c  get_accountinfo.c  get_accountinfo.c.20211124  get_bootmin.c  get_cfg.c  (+84 more)
